@@ -31,6 +31,7 @@ build-stamp:
 build-manual:
 	-rm -rf debian/tmp/$(DESTDIR)/doc/manual
 	cd doc/manual/build && \
+	        official_build=1 \
 		destination=$(shell pwd)/debian/tmp/$(DESTDIR)/doc/manual \
 		architectures=$(ARCH) noarchdir=1 ./build.sh
 
